Corrected my hometask "Add ShoppingCart model"